# bream

./: .gitignore  Makefile  README.md  example.py  pyproject.toml  test_custom.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish_pypi.yml
src/amber/: __init__.py
src/bream/: __init__.py  coders.py  core.py
tests/: test_coders.py  test_core.py  test_custom.py  test_simple.py
