[project]
name = "amber"
version = "0.0.1"
description = "Explicitly versioned JSON serialisation"
readme = "README.md"
authors = [{ name = "Tom Gillam", email = "tpgillam@googlemail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["ruff ==0.9.2", "pyright ==1.1.392.post0"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
reportUnknownMemberType = true
reportPrivateUsage = false     # ruff SLF does it better
# The following are not enabled by default in 'strict' mode, but we want them.
#   See the table here:
#   https://microsoft.github.io/pyright/#/configuration?id=diagnostic-settings-defaults
reportMissingModuleSource = "error"        # By default only 'warning'
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
